# KedroDemo

./: README.md  pyproject.toml  requirements.txt  session_store.db
.viz/: stats.json
conf/: logging.yml
docs/source/: conf.py  index.rst
src/kedro_handson/: __init__.py  __main__.py
tests/: test_run.py
tests/pipelines/data_science/: test_pipeline.py
